History
=======

Version 0.6.5 - Unreleased
--------------------------

- Fix #264694: Using non ASCII characters in context title
  of send-newsletter raises UnicodeEncodeError. [saily]

- Make ``PloneCallHTMLFormatter`` even more robust by switching to
  using ``BeautifulSoup`` instead of ``str.find`` to parse the
  contents. [nouri]

Version 0.6.4 - 2008-09-03
--------------------------

- Added a default ITransform adapter for S&D called
  ``dancing.transform.URL``.  This will rewrite relative links and the
  like automatically.  Relative links were the cause of broken links
  and images in the outgoing messages.  This fixes #262633.

  What this transform also allows is the definition of one or more
  backend URLs that it should replace by a canonical URL.  See
  ``transform.txt`` for details. [tmog, nouri]

- Fix #262612: The Reply-To field is not included as message header.

Version 0.6.3 - 2008-09-01
--------------------------

- Have the S&D SMTPMailer subclass from zope.sendmail's.  This allows
  the use of TLS with the standard configuration and fixes #263271.

Version 0.6.2 - 2008-08-28
--------------------------

- Updated docs with information on how to configure
  ``mail:queuedDelivery`` of ``zope.sendmail``. [nouri]

- Make the ``PloneCallHTMLFormatter`` which is the fallback formatter
  for all objects more robust. [tmog]

- Improve internationalization with newsletter object titles. [tmog]

- Fixed a bug in csv-export if you use more composer_data than just
  email address. [saily]

- Some people have reported that S&D is sending out duplicate mails on
  high-traffic newsletters.  I've added a ``StubSMTPMailer`` utility,
  which you can register conveniently in
  ``collective/dancing/mail.zcml``.  No mail will be sent out when
  it's configured instead of the default one.  This allows you to
  debug and fine-tune settings, e.g. those of your configured
  ``mail:queuedDelivery`` component. [nouri]
