@@ -1160,6 +1160,17 @@ And see that they've stuck.
   >>> browser.getControl(name="composers.html.widgets.replyto_address").value
   'noreply@domain.tld'
 
+We can also add some header and footer text for the messages with the
+composer:
+
+  >>> browser.getControl(name='composers.html.widgets.header_text').value = \
+  ... 'Our little header'
+  >>> browser.getControl(name='composers.html.widgets.footer_text').value = \
+  ... 'Our little footer'
+  >>> browser.getControl('Save').click()
+  >>> 'Data successfully updated.' in browser.contents
+  True
+
 Now let's send out a frontpage preview to see the new composer values
 have taken effect.
   
@@ -1175,7 +1186,7 @@ have taken effect.
 
   >>> channel.queue.dispatch() # doctest: +ELLIPSIS +NORMALIZE_WHITESPACE
   *MyMailDelivery sending*:
-  ...
+  ...Our little header...Welcome to Plone...Our little footer...
   (1, 0)
 
   >>> msg = quopri.decodestring(MyMailDelivery.sent[-1])
