@@ -42,7 +42,7 @@ setup(name='collective.dancing',
           'setuptools',
           'collective.singing>=0.6.2',
           'plone.z3cform>=0.5.1dev',
-          'plone.app.z3cform>=0.4.0',
+          'plone.app.z3cform>=0.4.2',
           'five.intid',
           'StoneageHTML',
           'BeautifulSoup',
